# linkedin-importer

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
docs/: DEBUGGING_REPORT.md  MIGRATION.md  USAGE_EXAMPLES.md  manual_testing_checklist.md  simulated_database_output.json
src/linkedin_importer/: __init__.py  cli.py  config.py  db_models.py  errors.py  linkedin_client.py  logging_config.py  mapper.py  models.py  orchestrator.py  repository.py  scraper_adapter.py  scraper_client.py  scraper_errors.py  validation.py
tests/: __init__.py  mock_linkedin_api.py  test_config_missing.py  test_config_precedence.py  test_config_properties.py  test_database_integration.py  test_env_file.py  test_error_properties.py  test_francois_profile.py  test_import_properties.py  test_integration.py  test_linkedin_client_properties.py  test_logging_properties.py  test_mapper_properties.py  test_orchestrator_integration.py  test_repository_properties.py  test_scraper_adapter.py  test_scraper_authentication.py  test_scraper_browser_management.py  test_scraper_config_properties.py  test_scraper_errors.py  test_scraper_profile.py  test_url_normalization.py  test_validation_properties.py
tests/fixtures/: minimal_profile.html  sample_profile.html  special_chars_profile.html
